fix merge and do s'more edits

--- a/Comps II/Comps II_2.tex
+++ b/Comps II/Comps II_2.tex
@@ -75,11 +75,9 @@
 % Place your abstract within the special {sciabstract} environment.
 
 \begin{sciabstract}
-<<<<<<< HEAD
-No comprehensive model of the brain exists. Recent results in experimental and theoretical neuroscience indicate the brain may be operating at a critical point in a continuous phase transition. Methods in statistical physics are able to shed some light on this phenomena. As a result, models abstracted of biological details that consider networks of excitable elements at criticality capture the emergent, macroscopic behavior of the brain.
-=======
-No comprehensive model of the brain exists. Recent results in experimental and theoretical neuroscience indicate the brain may be operating as though at a critical point in a continuous phase transition. Methods in statistical physics are able to shed some light on this phenomenon. This paper provides a review of how models abstracted of biological details that consider networks of excitable elements at criticality capture the emergent, macroscopic behavior of the brain.
->>>>>>> origin/master
+
+No comprehensive model of the brain exists. Recent results in experimental and theoretical neuroscience indicate the brain may be operating at a critical point in a continuous phase transition. Methods in statistical physics are able to shed some light on this phenomenon. This paper provides a review of how models abstracted of biological details that consider networks of excitable elements at criticality capture the emergent, macroscopic behavior of the brain.
+
 \end{sciabstract}
 
 \section*{Introduction}
@@ -96,17 +94,13 @@ The structure of the paper is as follows. First, I review relevant background in
 
 \section*{Physics of phase transitions and critical phenomena}
 
-<<<<<<< HEAD
-Statistical physics has had great success in explaining the emergence of macroscopic thermodynamic behavior from underlying microscopic interactions. An emergent phenomena is a macroscopic one that can be modeled simply, though it arises out of complicated microscopic interactions. Many interdisciplinary fields have attempted to make use of statistical mechanics to explain phenomena arising out of complicated dynamics. In the context of the brain, complicated neuronal interactions lead to conscious behavior. Perhaps the emergence of psychological phenomena may be simply modeled by the physics of phase transitions.
-=======
-Statistical physics has had great success in explaining the emergence of macroscopic thermodynamic behavior from underlying microscopic interactions. An emergent phenomenon is a macroscopic one that can be explained simply, though it arises out of complicated microscopic interactions. Many interdisciplinary fields have attempted to make use of statistical mechanics to explain phenomena arising out of complicated dynamics. In the context of the brain, complicated neuronal interactions lead to conscious behavior. Perhaps the emergence of psychological phenomena may be simply modeled by the physics of phase transitions.
->>>>>>> origin/master
+Statistical physics has had great success in explaining the emergence of macroscopic thermodynamic behavior from underlying microscopic interactions. An emergent phenomenon is a macroscopic one that can be modeled simply, though it arises out of complicated microscopic interactions. Many interdisciplinary fields have attempted to make use of statistical mechanics to explain phenomena arising out of complicated dynamics. In the context of the brain, complicated neuronal interactions lead to conscious behavior. Perhaps the emergence of psychological phenomena may be simply modeled by the physics of phase transitions.
 
 A phase transition is a qualitative change in the macroscopic properties of a substance. Typically, this change occurs as a function of an external parameter, such as temperature. To quantify a phase transition, it is useful to look for a physical property that distinguishes between the two phases. Such an observable is called an order parameter. For the liquid-solid water transition, the density (or volume) is an example of an order parameter. In this case, the density changes discontinuously at the phase transition. There is an abrupt change from ice to water. Such phase transitions are called discontinuous phase transitions.
 
 Continuous phase transitions occur when the order parameter changes continuously across the transition from one phase to another. The critical point in a continuous phase transition is the point at which certain physical properties of the system in question are singular and the system itself is in some sense teetering between two phases, between two qualitatively different states such as order and disorder. These physical properties are known as susceptibilities, and are indicative of the response of the system to external perturbations. The correlation length gives the typical distance over which elements of the system may interact. Divergent susceptibility and infinite correlation length are two of the defining characterizations of continuous phase transitions.
 
-The 2D Ising model is one of the simplest models demonstrating a phase transition (Figure \ref{Figure::Ising model criticality}). The Ising model is a mathematical model consisting of interacting spins $s$ on a lattice. The spins take values of +1 or -1 and are coupled together through an interaction strength parameter $J$. The Hamiltonian for the Ising model is
+The 2D Ising model is one of the simplest models demonstrating a continuous phase transition (Figure \ref{Figure::Ising model criticality}). The Ising model is a mathematical model consisting of interacting spins $s$ on a lattice. The spins take values of +1 or -1 and are coupled together through an interaction strength parameter $J$. The Hamiltonian for the Ising model is
 
 \begin{equation}
 \mathcal{H} = - \sum_{ij}Js_{i}s_{j} - H\sum_{i}s_{i},
@@ -114,11 +108,7 @@ The 2D Ising model is one of the simplest models demonstrating a phase transitio
 
 \noindent where the sum $(ij)$ is over all pairs of nearest-neighbor sites. In the context of magnetism, $H$ is the external field and the sum $M=\sum\limits_{i} s_{i}$ is the magnetization. In the case of no external field, as its temperature is increased a magnet may undergo a second order phase transition from ferromagnetic to paramagnetic. As the system approaches a critical temperature the magnetization vanishes continuously. At the critical temperature, the magnetization fluctuates wildly corresponding to neither an ordered ferromagnetic nor disordered paramagnetic state.
 
-<<<<<<< HEAD
-Two main features of continuous phase transitions are scale-invariance and universality. Scale invariance means fluctuations occur at all length scales. The correlation length is infinite, and so such systems are statistically invariant under changes in length scale. Universality signifies a lack of dependence on microscopic properties near the critical point. As a result, widely different microscopic systems can display the same macroscopic behavior at a phase transition. The same scale-invariant theory can be used to describe many different systems. Properties such as susceptibility, specific heat, and correlation lengths have power law singularities at the critical point. The critical exponents corresponding to these power laws  may be shared between seemingly disparate systems such as ferromagnets and liquid-gas systems, which as a result may both be modeled by the Ising model. Most relevant for the discussion to follow in this paper is the power-law decay of correlations that occurs near the critical point. These features of continuous phase transitions at the critical point are collectively referred to as critical phenomena.
-=======
-Two main features of continuous phase transitions are scale-invariance and universality. That a phase transition is scale-invariant means fluctuations occur at all length scales, and so such systems are statistically invariant under changes in length scale. Universality signifies a lack of dependence on microscopic properties near the critical point. As a result, widely different microscopic systems can display the same macroscopic behavior at a phase transition. The same scale-invariant theory can be used to describe many different systems. Properties such as susceptibility, specific heat, and correlation lengths have power law singularities at the critical point. The critical exponents corresponding to these power laws  may be shared between seemingly disparate systems such as ferromagnets and liquid-gas systems, which as a result may both be modeled by the Ising model. These features of continuous phase transitions at the critical point are collectively referred to as critical phenomena.
->>>>>>> origin/master
+Two main features of continuous phase transitions are scale-invariance and universality. Scale invariance means the system is statistically invariant under changes in length scale, which occurs when the correlation length is infinite. Thus, fluctuations occur at all scales. Universality signifies a lack of dependence on microscopic properties near the critical point. As a result, widely different microscopic systems can display the same macroscopic behavior at a phase transition. The same scale-invariant theory can be used to describe many different systems. Properties such as susceptibility, specific heat, and correlation lengths have power law singularities at the critical point. The critical exponents corresponding to these power laws  may be shared between seemingly disparate systems such as ferromagnets and liquid-gas systems, which as a result may both be modeled by the Ising model. These features of continuous phase transitions at the critical point are collectively referred to as critical phenomena.
 
 In much the same way ferromagnetism emerges from the interactions of spins, the mind may be an emergent property of neuronal interactions. 
 
@@ -151,11 +141,8 @@ The propagation of activity in networks is often modeled with branching processe
    \end{figure}
 
 \section*{The Ising model and the brain}
-<<<<<<< HEAD
-Certain macroscopic phenomenological features of the brain can be replicated by using the 2D Ising model as minimal model for brain activity \cite{Fraiman2009a}. Brain functional magnetic resonance imaging (fMRI) data and a 2D Ising model simulation were transformed into networks and their degree distributions analyzed. Correlations between sites in both were computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree distributions at particular average degrees for both the Ising model at criticality and brain fMRI data display remarkable similarity (Figure \ref{Figure::Ising model and the brain at criticality}). Despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details are not relevant to the network dynamics and emergent macroscopic behavior.
-=======
-Certain macroscopic phenomenological features of the brain can be replicated by using the 2D Ising Hamiltonian as a minimal model for brain activity \cite{Fraiman2009a}. Brain functional magnetic resonance imaging (fMRI) data and a 2D Ising model simulation were transformed into networks and their degree distributions analyzed. Correlations between sites in both were computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree distributions at particular average degrees for both the Ising model at criticality and brain FMRI data display remarkable similarity (see Figure \ref{Figure::Ising model and the brain at criticality}). Despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details are not relevant to the emergent macroscopic behavior and network dynamics.
->>>>>>> origin/master
+
+Certain macroscopic phenomenological features of the brain can be replicated by using the 2D Ising Hamiltonian as a minimal model for brain activity \cite{Fraiman2009a}. Brain functional magnetic resonance imaging (fMRI) data and a 2D Ising model simulation were transformed into networks and their degree distributions analyzed. Correlations between sites in both were computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree distributions at particular average degrees for both the Ising model at criticality and brain fMRI data display remarkable similarity (Figure \ref{Figure::Ising model and the brain at criticality}). Despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details are not relevant to the network dynamics and emergent macroscopic behavior.
 
 \begin{figure}      
   \begin{center}    
@@ -168,7 +155,7 @@ Certain macroscopic phenomenological features of the brain can be replicated by 
 \begin{figure}      
   \begin{center}    
  \includegraphics[width=.6\textwidth]{originalavalancheplenz}    
-    \caption{\textbf{Size distribution of neuronal avalanches} in cortical cultured networks follows a power law with exponent of approximately -3/2 (dashed line) \cite{Beggs2003b}. Insets indicate number of electrodes, and thus network size. Avalanches occur up to system size.}
+    \caption{\textbf{Size distribution of neuronal avalanches} in cortical cultured networks follows a power law with exponent of approximately -3/2 (dashed line) \cite{Beggs2003b}. Insets indicate number of electrodes, and thus network size. Avalanches occur up to the system size.}
    \label{Figure::Neuronal Avalanches}   
   \end{center}     
    \end{figure}
@@ -177,12 +164,12 @@ Certain macroscopic phenomenological features of the brain can be replicated by 
 
 In general, complex systems, such as networks of neurons, are characterized by two phases: a noisy, chaotic state with very weak interactions and a frozen, static state with very strong interactions - with a mediating critical junction. The brain must maintain some order to ensure consistent behavioral responses to particular stimuli as well as some degree of disorder to enable flexibility in the form of adaptive changes to a dynamic environment, implying it operates at criticality \cite{Bak1987a}. Experiments such as the previously discussed Ising model comparison lend further weight to this notion. Experimental demonstration of neuronal avalanches gives further, more robust evidence of the brain functioning at a critical point.
 
-In 2003, the first experimental evidence that neuronal activity does involve neuronal avalanches - impulsive propagation of activity from individual neurons firing and triggering subsequent neurons to fire - was published\cite{Beggs2003b}. By studying the propagation of spontaneous neuronal activity in slices of rat cortex on multielectrode arrays, Beggs and Plenz observed avalanches of signal with size distribution $ D(s) \sim s^{-3/2} $ (Figure \ref{Figure::Neuronal Avalanches}). Avalanches occur up to the size of the system (the number of electrodes), which is consistent with avalanches occurring at a critical point. Over 2 orders of magnitude the distribution is a power law with exponent -3/2. In addition, the branching parameter, i.e. the number of neurons excited step-by-step during the avalanche, is about 1. Neuronal avalanches in several systems follow power laws just as would be expected from a critical branching process (Figure \ref{Figure::Neuronal avalanches in vitro and in vivo}).
+In 2003, the first experimental evidence that neuronal activity does involve neuronal avalanches - impulsive propagation of activity from individual neurons firing and triggering subsequent neurons to fire - was published\cite{Beggs2003b}. By studying the propagation of spontaneous neuronal activity in slices of rat cortex on multielectrode arrays, Beggs and Plenz observed avalanches of signal with size distribution $ D(s) \sim s^{-3/2} $ (Figure \ref{Figure::Neuronal Avalanches}). Avalanches occur up to the size of the system (the number of electrodes), which is consistent with avalanches occurring at a critical point. Over two orders of magnitude the distribution is a power law with exponent -3/2. In addition, the branching parameter, i.e. the number of neurons excited step-by-step during the avalanche, is about one. Neuronal avalanches in several systems follow power laws just as would be expected from a critical branching process (Figure \ref{Figure::Neuronal avalanches in vitro and in vivo}).
    
 \begin{figure}      
   \begin{center}    
  \includegraphics[width=1\textwidth]{avalanchesplenzbook3}    
-    \caption{\textbf{Comparison of neuronal avalanches in several systems \cite{Plenz2014}.} (a) Neuronal avalanches in rat cortex slice \textit{in vitro}. (b) Neuronal avalanches in rat \textit{in vivo}. (c) Neuronal avalanches in awake macaque monkey. Cutoff corresponds to area of array i.e. number of electrodes. (d) Resting magnetoencephalography (MEG) of the human brain demonstrating neuronal avalanches. Sensor array size noted by grayscale and numbers on plot.}
+    \caption{\textbf{Comparison of neuronal avalanches in several systems \cite{Plenz2014}.} (a) Neuronal avalanches in rat cortex slice \textit{in vitro}. (b) Neuronal avalanches in rat \textit{in vivo}. (c) Local field potential (LFP) measurements in awake macaque monkey indicating neuronal avalanches. Cutoff corresponds to area of array i.e. number of electrodes. (d) Resting magnetoencephalography (MEG) of the human brain demonstrating neuronal avalanches. Sensor array size noted by grayscale and numbers on plot.}
    \label{Figure::Neuronal avalanches in vitro and in vivo}   
   \end{center}     
    \end{figure}
@@ -198,7 +185,7 @@ The intensity of human-detectable physical stimuli, such as light and sound, var
 \begin{figure}      
   \begin{center}    
  \includegraphics[width=1\textwidth]{dynamicrangetheorycopelli}    
-    \caption{\textbf{Simulations of response curves and dynamic range} for generic model of network of interacting, excitable elements \cite{Kinouchi2006b}. \textbf{(a, b)} Average activity $F$ (i.e. number of excited elements) versus stimulus rate $r$ with branching parameters from $\sigma = 0$ to 2 in intervals of 0.2. The data is represented logarithmic and linear scales in \textbf{(a)} and \textbf{(b)}, respectively. \textbf{(c)} Response curve for $\sigma = 1.2$ with dynamic range $\Delta$ from $10\%$ to $90\%$ of saturated response. \textbf{(d)} Dynamic range versus branching ratio. Optimization occurs at the critical point $\sigma = 1$.}
+    \caption{\textbf{Simulations of response curves and dynamic range} for generic model of network of interacting, excitable elements \cite{Kinouchi2006b}. \textbf{(a, b)} Average activity $F$ (i.e. number of excited elements) versus stimulus rate $r$ (both in units of $ms^{-1}$) with branching parameters from $\sigma = 0$ to 2 in intervals of 0.2. The data is represented with logarithmic and linear scales in \textbf{(a)} and \textbf{(b)}, respectively. \textbf{(c)} Response curve for $\sigma = 1.2$ with dynamic range $\Delta$ from $10\%$ to $90\%$ of saturated response $F_{max}$. \textbf{(d)} Dynamic range $\Delta$ in dB versus branching ratio $\sigma$. Optimization occurs at the critical point $\sigma = 1$.}
    \label{Figure::Dynamic Range Theory}   
   \end{center}     
    \end{figure}
@@ -225,7 +212,7 @@ H = - \sum^{n}_{i=1}p_{i}\log_{2}p_{i},
 \begin{figure}      
   \begin{center}    
  \includegraphics[width=.50\textwidth]{entropyplenz}    
-    \caption{\textbf{Information capacity \cite{Shew2011a}.} Experimental data taken with same drug-color scheme as previous figure. Information entropy is maximized around $\kappa = 1$. Grey line indicates binned average of points.}
+    \caption{\textbf{Information capacity \cite{Shew2011a}.} Experimental data taken with no administered drug (black) a drug that reduces inhibition (red) and a drug that reduces excitation (blue). Information (i.e. Shannon) entropy $H$ is maximized around $\kappa = 1$. Grey line indicates binned average of points.}
    \label{Figure::Entropy / information maximized experimental}   
   \end{center}     
    \end{figure}
