--- a/Comps II/Comps II_2.tex
+++ b/Comps II/Comps II_2.tex
@@ -108,7 +108,7 @@ The 2D Ising model is one of the simplest models demonstrating a continuous phas
 
 \noindent where the sum $(ij)$ is over all pairs of nearest-neighbor sites. In the context of magnetism, $H$ is the external field and the sum $M=\sum\limits_{i} s_{i}$ is the magnetization. In the case of no external field, as its temperature is increased a magnet may undergo a second order phase transition from ferromagnetic to paramagnetic. As the system approaches a critical temperature the magnetization vanishes continuously. At the critical temperature, the magnetization fluctuates wildly corresponding to neither an ordered ferromagnetic nor disordered paramagnetic state.
 
-Two main features of continuous phase transitions are scale-invariance and universality. Scale invariance means the system is statistically invariant under changes in length scale, which occurs when the correlation length is infinite. Thus, fluctuations occur at all scales. Universality signifies a lack of dependence on microscopic properties near the critical point. As a result, widely different microscopic systems can display the same macroscopic behavior at a phase transition. The same scale-invariant theory can be used to describe many different systems. Properties such as susceptibility, specific heat, and correlation lengths have power law singularities at the critical point. The critical exponents corresponding to these power laws  may be shared between seemingly disparate systems such as ferromagnets and liquid-gas systems, which as a result may both be modeled by the Ising model. These features of continuous phase transitions at the critical point are collectively referred to as critical phenomena.
+Two main features of continuous phase transitions are scale-invariance and universality. Scale invariance means the system is statistically invariant under changes in length scale, which occurs when the correlation length is infinite. Thus, fluctuations occur at all scales. Universality signifies a lack of dependence on microscopic properties near the critical point. As a result, widely different microscopic systems can display the same macroscopic behavior at a phase transition. The same scale-invariant theory can be used to describe many different systems. Properties such as susceptibility, specific heat, and correlation length have power law singularities at the critical point. The critical exponents corresponding to these power laws  may be shared between seemingly disparate systems such as ferromagnets and liquid-gas systems, which as a result may both be modeled by the Ising model. These features of continuous phase transitions at the critical point are collectively referred to as critical phenomena.
 
 In much the same way ferromagnetism emerges from the interactions of spins, the mind may be an emergent property of neuronal interactions. 
 
@@ -130,19 +130,14 @@ A system exhibiting scale invariance in the form of avalanches of activity that 
 
 Often, complex systems comprised of numerous interacting parts - such as the brain - are modeled as networks. Networks, individuals and the complicated interconnections between them, are represented mathematically as collections of nodes with connecting links. Structural properties of a network's topology may be analyzed to give insight into the workings of the network. One such property is the degree distribution. The degree of a node is the number of connections it has to other nodes. So, the degree distribution is the probability distribution of all the degrees of the nodes in the network. 
 
-The propagation of activity in networks is often modeled with branching processes. Branching processes were originally studied in the context of the survival of aristocratic family names in the Victorian era\cite{Watson2014}, and more recently in understanding the propagation of disease. An excited node branches to each other node with some probability, the sum of which is known as the branching ratio. In the case of a critical branching process, the branching ratio is equal to one. The propagation of excitations in a branching process behaves as the avalanches previously described. In the critical regime, both the size $s$ and duration $t$ of the avalanches follow power laws $ D(s) \sim s^{-3/2} $ and $ D(t) \sim t^{-2} $, respectively \cite{Larremore2014}. Should the average number of active nodes increase (decrease), the process is dubbed supercritical (subcritical) - as illustrated in Figure \ref{Figure::Critical Branching Process}. 
-
-\begin{figure}      
+\begin{figure}[h] 
   \begin{center}    
  \includegraphics[width=.7\textwidth]{Branchingprocesschialvo}    
     \caption{\textbf{Branching processes \cite{Chialvo2006a}.} Subcritical branching processes quickly die out, while the system is saturated in the supercritical regime. Only in the critical state with the branching ratio $\sigma = 1$ is the input activity maintained, on average. At criticality, the system is sensitive to both small and large pertubations, thus maximizing its dynamic range.}
    \label{Figure::Critical Branching Process}   
   \end{center}     
    \end{figure}
-
-\section*{The Ising model and the brain}
-
-Certain macroscopic phenomenological features of the brain can be replicated by using the 2D Ising Hamiltonian as a minimal model for brain activity \cite{Fraiman2009a}. Brain functional magnetic resonance imaging (fMRI) data and a 2D Ising model simulation were transformed into networks and their degree distributions analyzed. Correlations between sites in both were computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree distributions at particular average degrees for both the Ising model at criticality and brain fMRI data display remarkable similarity (Figure \ref{Figure::Ising model and the brain at criticality}). Despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details are not relevant to the network dynamics and emergent macroscopic behavior.
+The propagation of activity in networks is often modeled with branching processes. Branching processes were originally studied in the context of the survival of aristocratic family names in the Victorian era\cite{Watson2014}, and more recently in understanding the propagation of disease. An excited node branches to each other node with some probability, the sum of which is known as the branching ratio. In the case of a critical branching process, the branching ratio is equal to one. The propagation of excitations in a branching process behaves as the avalanches previously described. In the critical regime, both the size $s$ and duration $t$ of the avalanches follow power laws $ D(s) \sim s^{-3/2} $ and $ D(t) \sim t^{-2} $, respectively \cite{Larremore2014}. Should the average number of active nodes increase (decrease), the process is dubbed supercritical (subcritical) - as illustrated in Figure \ref{Figure::Critical Branching Process}. 
 
 \begin{figure}      
   \begin{center}    
@@ -152,6 +147,10 @@ Certain macroscopic phenomenological features of the brain can be replicated by 
   \end{center}     
    \end{figure}
    
+\section*{The Ising model and the brain}
+
+Certain macroscopic phenomenological features of the brain can be replicated by using the 2D Ising Hamiltonian as a minimal model for brain activity \cite{Fraiman2009a}. Brain functional magnetic resonance imaging (fMRI) data and a 2D Ising model simulation were transformed into networks and their degree distributions analyzed. Correlations between sites in both were computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree distributions at particular average degrees for both the Ising model at criticality and brain fMRI data display remarkable similarity (Figure \ref{Figure::Ising model and the brain at criticality}). Despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details are not relevant to the network dynamics and emergent macroscopic behavior.
+
 \begin{figure}      
   \begin{center}    
  \includegraphics[width=.6\textwidth]{originalavalancheplenz}    
@@ -164,23 +163,21 @@ Certain macroscopic phenomenological features of the brain can be replicated by 
 
 In general, complex systems, such as networks of neurons, are characterized by two phases: a noisy, chaotic state with very weak interactions and a frozen, static state with very strong interactions - with a mediating critical junction. The brain must maintain some order to ensure consistent behavioral responses to particular stimuli as well as some degree of disorder to enable flexibility in the form of adaptive changes to a dynamic environment, implying it operates at criticality \cite{Bak1987a}. Experiments such as the previously discussed Ising model comparison lend further weight to this notion. Experimental demonstration of neuronal avalanches gives further, more robust evidence of the brain functioning at a critical point.
 
-In 2003, the first experimental evidence that neuronal activity does involve neuronal avalanches - impulsive propagation of activity from individual neurons firing and triggering subsequent neurons to fire - was published\cite{Beggs2003b}. By studying the propagation of spontaneous neuronal activity in slices of rat cortex on multielectrode arrays, Beggs and Plenz observed avalanches of signal with size distribution $ D(s) \sim s^{-3/2} $ (Figure \ref{Figure::Neuronal Avalanches}). Avalanches occur up to the size of the system (the number of electrodes), which is consistent with avalanches occurring at a critical point. Over two orders of magnitude the distribution is a power law with exponent -3/2. In addition, the branching parameter, i.e. the number of neurons excited step-by-step during the avalanche, is about one. Neuronal avalanches in several systems follow power laws just as would be expected from a critical branching process (Figure \ref{Figure::Neuronal avalanches in vitro and in vivo}).
-   
-\begin{figure}      
+\begin{figure}   
   \begin{center}    
  \includegraphics[width=1\textwidth]{avalanchesplenzbook3}    
     \caption{\textbf{Comparison of neuronal avalanches in several systems \cite{Plenz2014}.} (a) Neuronal avalanches in rat cortex slice \textit{in vitro}. (b) Neuronal avalanches in rat \textit{in vivo}. (c) Local field potential (LFP) measurements in awake macaque monkey indicating neuronal avalanches. Cutoff corresponds to area of array i.e. number of electrodes. (d) Resting magnetoencephalography (MEG) of the human brain demonstrating neuronal avalanches. Sensor array size noted by grayscale and numbers on plot.}
    \label{Figure::Neuronal avalanches in vitro and in vivo}   
   \end{center}     
    \end{figure}
-
+   
+In 2003, the first experimental evidence that neuronal activity does involve neuronal avalanches - impulsive propagation of activity from individual neurons firing and triggering subsequent neurons to fire - was published\cite{Beggs2003b}. By studying the propagation of spontaneous neuronal activity in slices of rat cortex on multielectrode arrays, Beggs and Plenz observed avalanches of signal with size distribution $ D(s) \sim s^{-3/2} $ (Figure \ref{Figure::Neuronal Avalanches}). Avalanches occur up to the size of the system (the number of electrodes), which is consistent with avalanches occurring at a critical point. Over two orders of magnitude the distribution is a power law with exponent -3/2. In addition, the branching parameter, i.e. the number of neurons excited step-by-step during the avalanche, is about one. Neuronal avalanches in several systems follow power laws just as would be expected from a critical branching process (Figure \ref{Figure::Neuronal avalanches in vitro and in vivo}).
+  
 Experimental evidence points towards networks of neurons operating in a critical regime characterized by power laws, but simply observing a trend in data that follows a power law does not establish the presence of critical phenomena. Some physical parameters must be shown to pass through a singularity, and the generative mechanism of the phenomena should be theoretically described. In addition, the use of the concept of criticality ought to be applied only if it yields some insight. Crucially, if the critical brain story is to be legitimized there must be a functional purpose for this supposed phenomena. 
       
 \section*{The brain as an information processor}
 
 Any theory purported to describe neuronal networks should account for what we know about the information processing capabilities of the brain. The theory of criticality in networks provides something novel. Through both theoretical models and experimental findings, it has been shown that networks of neurons achieve maximal information capacity and dynamic range at criticality. Thus, there is a functional benefit to maintaining a critical state in the brain.
-   
-The intensity of human-detectable physical stimuli, such as light and sound, varies by several orders of magnitude. For hearing the dynamic range is on the order of 140 dB, for sight it is 90 dB. This very large dynamic range must be accounted for in the model. Since single neurons respond in a linear, saturating way with a limited range, the broad dynamic range must be a collective phenomena \cite{Kinouchi2006b}. Kinouchi and Copelli demonstrated computationally (see Figure \ref{Figure::Dynamic Range Theory}) that a network of excitable elements, such as a neuronal network, has its dynamic range and sensitivity maximized at its critical point during a continuous phase transition\cite{Kinouchi2006b}. This finding is consistent with and lends further credence to the brain operating at criticality. The dynamic range is calculated from the $10\%-90\%$ response interval and is seen to be maximized at the critical branching ratio. In the subcritical regime, the dynamic range increases with the branching ratio. In the supercritical regime, the dynamic range decreases with the branching ratio \cite{Larremore2011a, Larremore2012a}.
 
 \begin{figure}      
   \begin{center}    
@@ -189,6 +186,8 @@ The intensity of human-detectable physical stimuli, such as light and sound, var
    \label{Figure::Dynamic Range Theory}   
   \end{center}     
    \end{figure}
+   
+The intensity of human-detectable physical stimuli, such as light and sound, varies by several orders of magnitude. For hearing the dynamic range is on the order of 140 dB, for sight it is 90 dB. This very large dynamic range must be accounted for in the model. Since single neurons respond in a linear, saturating way with a limited range, the broad dynamic range must be a collective phenomena \cite{Kinouchi2006b}. Kinouchi and Copelli demonstrated computationally (see Figure \ref{Figure::Dynamic Range Theory}) that a network of excitable elements, such as a neuronal network, has its dynamic range and sensitivity maximized at its critical point during a continuous phase transition\cite{Kinouchi2006b}. This finding is consistent with and lends further credence to the brain operating at criticality. The dynamic range is calculated from the $10\%-90\%$ response interval and is seen to be maximized at the critical branching ratio. In the subcritical regime, the dynamic range increases with the branching ratio. In the supercritical regime, the dynamic range decreases with the branching ratio \cite{Larremore2011a, Larremore2012a}.
 
 The ability of a neuronal network to process information is determined by the neural activity it produces. Activity patterns in cortex cultures, anesthetized rats, and awake monkeys were measured to quantify their dynamic range (Figure \ref{Figure::Dynamic Range Experiment}) and information capacity (Figure \ref{Figure::Entropy / information maximized experimental}). Experiments have demonstrated that networks generating neuronal avalanches benefit from maximized dynamic range\cite{Shew2009b}. By measuring the responses to a range of stimuli amplitudes, the dynamic range was computed by way of the same response interval as in the theoretical approach.
    
